k8s-specifications/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: postgres:latest
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: init-sql
      configMap:
        name: init-sql
